socket and connection timeout can be set in config

--- a/test-resources/local.properties
+++ b/test-resources/local.properties
@@ -2,3 +2,5 @@ test-db.mongo.host=localhost
 test-db.mongo.dbname=teslatest
 test-db.mongo.user=
 test-db.mongo.passwd=
+#test-db.mongo.socket-timeout=
+#test-db.mongo.connection-timeout=
