added possibility to configure the socket-keep-alive for each mongo

--- a/test-resources/local.properties
+++ b/test-resources/local.properties
@@ -2,5 +2,6 @@ test-db.mongo.host=localhost
 test-db.mongo.dbname=teslatest
 test-db.mongo.user=
 test-db.mongo.passwd=
-#test-db.mongo.socket-timeout=
 #test-db.mongo.connection-timeout=
+#test-db.mongo.socket-timeout=
+#test-db.mongo.socket-keep-alive=
